# simple_native_image_compress

./: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  flutter_rust_bridge.yaml  makefile  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle  build.gradle.kts
example/integration_test/: simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  (+1 more)
ios/: simple_native_image_compress.podspec
ios/Classes/: bridge_generated.h
lib/: simple_native_image_compress.dart
lib/src/: bridge_definitions.dart  bridge_generated.dart  simple_native_image_compress.dart  simple_native_image_compress_bindings_generated.dart
linux/: CMakeLists.txt
macos/: simple_native_image_compress.podspec
macos/Classes/: bridge_generated.h  simple_native_image_compress.c
rust/: ARCHITECTURE.md  Cargo.toml
rust/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  frb_generated.rs
rust/src/api/: batch.rs  compress.rs  constants.rs  encode.rs  mod.rs  orientation.rs
windows/: CMakeLists.txt
(+15 files in other folders)
