[package]
name = "simple_native_image_compress"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.86"
flutter_rust_bridge = "=2.3.0"
image = "0.25.2"
kamadak-exif = "0.5.5"

[profile.dev]
lto = true
panic = "abort"
opt-level = "z"
strip = "debuginfo"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
strip = "debuginfo"
