[package]
name = "simple_native_image_compress"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.98"
flutter_rust_bridge = "=2.11.1"
image = { version = "0.25.6", features = ["jpeg", "webp", "avif", "png"], default-features = false }
kamadak-exif = "0.6.1"
rayon = "1.10"

[profile.dev]
lto = "thin"
panic = "abort"
opt-level = 3
strip = "debuginfo"
codegen-units = 1
overflow-checks = false

[profile.release]
lto = "fat"
panic = "abort"
opt-level = 3
strip = "symbols"
codegen-units = 1
overflow-checks = false
